--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: right;
+  text-align: center;
 }
 
 .heroTitle {
@@ -26,7 +26,7 @@
   grid-column-gap: 5rem;
   align-items: center;
   justify-content: center;
-  grid-template-columns: 1fr 1fr;
+  place-items: center;
   padding: 15rem;
 }
 
@@ -41,7 +41,7 @@
 
 .heroInputContainer {
   position: relative;
-  margin-top: 2rem;
+  margin-top: 5rem;
   display: flex;
 }
 
@@ -68,6 +68,7 @@
   border-radius: 6px;
   color: white;
   border: none;
+  margin-left: 1rem;
   font-size: 2rem;
 }
 
