--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -11,12 +11,10 @@
 }
 
 .navItem {
-  font-size: 2rem;
   margin: 0.5rem 1.5rem;
   padding: 1rem;
   text-decoration: none;
   position: relative;
-  color: var(--seed-text-heading);
   &:hover::after {
     max-width: 100%;
   }
@@ -51,7 +49,7 @@
   border-radius: 50%;
   top: 50%;
   left: 50%;
-  background-color: white;
+  background-color: var(--seed-white);
   transform: translate(-50%, -50%);
   height: 20px;
   width: 20px;
@@ -67,16 +65,16 @@
 
 .logoText {
   margin: 1rem;
-  font-size: 3rem;
-  font-weight: 300;
 }
 
 .ctaLink {
   padding: 0.75rem 2rem;
-  color: white;
   border-radius: 6px;
   background-color: var(--seed-color-primary);
   &::after {
     max-width: 0 !important;
+  }
+  span {
+    color: var(--seed-white);
   }
 }
