--- a/src/components/Dashboard/dashboard.module.scss
+++ b/src/components/Dashboard/dashboard.module.scss
@@ -6,15 +6,8 @@
 }
 .dashboardContainer {
     overflow-y: scroll;
+    overflow-x: hidden;
     height: 800px;
-}
-
-.dashboardTitle { 
-    justify-content: center; 
-}
-
-.dashboardScore { 
-    justify-content: right;
 }
 
 .dashboardNav { 
@@ -22,7 +15,6 @@
     justify-content: space-between;
     width: 100%;
     padding: 1%;
-
 }
 
 .dashboardReportCard { 
@@ -34,9 +26,13 @@
     padding: 3%;
 }
 
+.dashboardTitle { 
+    width: 50%;
+    display: grid;
+}
 .dashboardScore { 
     display: inline-flex;
-    background-color: #ff5a5f;
+    background-color: var(--seed-color-primary);
     border-radius: 50%;
     padding: 10px;  
     text-align: center;
@@ -56,3 +52,22 @@
 .dashboardParts { 
     height: 300px;
 }
+
+.dashboardResident { 
+    display: block;
+}
+
+.dashboardContainer::-webkit-scrollbar {
+    width: 10px;
+}
+   
+.dashboardContainer::-webkit-scrollbar-thumb {
+    background: rgb(206, 205, 205);
+    border-radius: 20px;
+}
+  
+.dashboardContainer::-webkit-scrollbar-track {
+    background:#f1f1f1;
+    border-radius: 20px;
+}
+
