Created Login Form component

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -19,6 +19,7 @@ html {
   --seed-color-secondary: #3ee05a;
   --seed-text-heading: #484848;
   --seed-text-body: #767676;
+  --seed-border-light: #eaeaea;
   --seed-font: Brandon, arial, sans-serif;
   --seed-white: white;
   --seed-black: black;
