updated Listings component API

--- a/src/components/Input/input.module.scss
+++ b/src/components/Input/input.module.scss
@@ -19,6 +19,9 @@
   left: 0;
   &.active {
     transform: translateY(-30px);
+    span {
+      color: var(--seed-text-body-light);
+    }
   }
 }
 
