--- a/src/components/Dashboard/dashboard.module.scss
+++ b/src/components/Dashboard/dashboard.module.scss
@@ -12,7 +12,7 @@
 .dashboardNav {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  --width: 100%;
   padding: 1%;
 }
 
@@ -24,6 +24,7 @@
 
 .dashboardTitle {
   width: 50%;
+  padding-top: 20px;
   display: grid;
 }
 .dashboardScore {
@@ -41,17 +42,10 @@
   border-radius: 20px;
 }
 
-.dashboardContainer::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  border-radius: 20px;
-}
-
-.dashboardParts {
-  height: 300px;
-}
-
-.dashboardResident {
-  display: block;
+.dashboardCategoryTitle {
+  width: 100%;
+  padding: 1%;
+  --padding-top: 3%;
 }
 
 .dashboardContainer::-webkit-scrollbar {
@@ -66,4 +60,13 @@
 .dashboardContainer::-webkit-scrollbar-track {
   background: #f1f1f1;
   border-radius: 20px;
+}
+
+.plus {
+  margin: auto 0px;
+}
+.add {
+  display: block;
+  padding: 1rem;
+  cursor: pointer;
 }
