--- a/src/components/Dashboard/dashboard.module.scss
+++ b/src/components/Dashboard/dashboard.module.scss
@@ -6,20 +6,23 @@
 .dashboardContainer {
   overflow-y: scroll;
   overflow-x: hidden;
-  height: 800px;
+  height: 80rem;
 }
 
 .dashboardNav {
   display: flex;
   justify-content: space-between;
-  --width: 100%;
-  padding: 1%;
+  padding-bottom: 1.5rem;
+  border-bottom: 2px solid var(--seed-border-light);
 }
 
-.dashboardCategoryTitle {
-  width: 100%;
-  padding: 1%;
-  padding-top: 3%;
+.dashboardReportCard {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1rem;
+  border: #dad8d8 solid 1px;
+  border-radius: 3px;
+  padding: 3%;
 }
 
 .dashboardTitle {
@@ -37,9 +40,8 @@
   color: #ffeaea;
 }
 
-.dashboardContainer::-webkit-scrollbar-thumb {
-  background: rgb(206, 205, 205);
-  border-radius: 20px;
+.dashboardStats {
+  display: block;
 }
 
 .dashboardCategoryTitle {
