--- a/src/components/Listings/listings.module.scss
+++ b/src/components/Listings/listings.module.scss
@@ -3,3 +3,31 @@
   font-weight: 600;
   color: var(--seed-color-secondary);
 }
+.card { 
+
+  transition: transform .3s;
+
+  &::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: opacity 1s;
+    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .15);
+    border-radius: 1rem;
+    content: '';
+    opacity: 0;
+    z-index: -1;
+  }
+
+  &:hover,
+  &:focus {
+    transform: perspective(.1rem) translateZ(0);
+
+    &::after {
+      opacity: .6;
+    }
+  }
+
+}
