--- a/src/components/Listings/listings.module.scss
+++ b/src/components/Listings/listings.module.scss
@@ -13,8 +13,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    transition: opacity 1s;
-    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .15);
+    transition: opacity .4s;
+    box-shadow: 0 .5rem 3rem 0 rgba(0, 0, 0, .2), 0 .6rem .6rem 0 rgba(0, 0, 0, .1);
     border-radius: 1rem;
     content: '';
     opacity: 0;
