--- a/src/components/Dashboard/dashboard.module.scss
+++ b/src/components/Dashboard/dashboard.module.scss
@@ -3,10 +3,14 @@
   padding: 0 2rem;
   border-radius: 1rem;
 }
+
 .dashboardContainer {
   overflow-y: scroll;
   overflow-x: hidden;
   height: 70rem;
+  padding: 0 2rem;
+  display: grid;
+  grid-row-gap: 5rem;
 }
 
 .dashboardNav {
