--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -61,3 +61,11 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+*[data-name] {
+  fill: lightgreen;
+}
+
+*[data-name='test'] {
+  fill: orangered;
+}
