adding click handler to map

--- a/src/components/FavoriteListings/FavoriteListingItem/favoritelistingitem.module.scss
+++ b/src/components/FavoriteListings/FavoriteListingItem/favoritelistingitem.module.scss
@@ -1,6 +1,7 @@
 .add {
   padding: 1rem;
   cursor: pointer;
+  transform: translate(10px, -25px);
 }
 
 .header {
@@ -8,6 +9,6 @@
   justify-content: space-between;
 }
 
-.add:hover { 
+.add:hover {
   color: var(--seed-color-primary);
 }
