Added all listings to discover page

--- a/src/components/FavoriteListings/FavoriteListingItem/favoritelistingitem.module.scss
+++ b/src/components/FavoriteListings/FavoriteListingItem/favoritelistingitem.module.scss
@@ -12,3 +12,9 @@
 .add:hover {
   color: var(--seed-color-primary);
 }
+
+.listingGrade {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
