Added authentication rerouting

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -16,7 +16,7 @@ html {
 
 :root {
   --seed-color-primary: #ff5a5f;
-  --seed-color-secondary: #3ee05a;
+  --seed-color-secondary: #00b3a1;
   --seed-text-heading: #484848;
   --seed-text-body: #767676;
   --seed-text-body-light: #c7c7c7;
