--- a/src/components/Map/map.module.scss
+++ b/src/components/Map/map.module.scss
@@ -17,7 +17,7 @@
   stroke-width: 0px;
   transition: fill 0.2s;
   &:hover {
-    fill: var(--seed-color-primary);
+    fill: var(--seed-color-secondary);
   }
 }
 
