--- a/src/components/Dashboard/dashboard.module.scss
+++ b/src/components/Dashboard/dashboard.module.scss
@@ -18,6 +18,7 @@
   justify-content: space-between;
   padding-bottom: 1.5rem;
   border-bottom: 2px solid var(--seed-border-light);
+  position: relative;
 }
 
 .dashboardReportCard {
